refactor code based on comment
Signed-off-by: Junwei Dai <junweid@amazon.com>